<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logotipo"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:padding="8dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:elevation="2dp"
        android:foreground="?android:attr/selectableItemBackground">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow">


            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_location_on_24"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_margin="18dp" />


            <TextView
                android:id="@+id/texto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/image_icon"
                android:text="@string/NacApp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:elevation="2dp"
        android:foreground="?android:attr/selectableItemBackground">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow">


            <ImageView
                android:id="@+id/imagenDesarr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="18dp"
                android:src="@drawable/baseline_person_24" />


            <TextView
                android:id="@+id/texto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/imagenDesarr"
                android:text="@string/desarrollador"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:elevation="2dp"
        android:foreground="?android:attr/selectableItemBackground">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow">


            <ImageView
                android:id="@+id/Categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="18dp"
                android:src="@drawable/baseline_category_24" />


            <TextView
                android:id="@+id/texto3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/Categoria"
                android:text="@string/categoria"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:elevation="2dp"
        android:foreground="?android:attr/selectableItemBackground">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow">


            <ImageView
                android:id="@+id/Publico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="18dp"
                android:src="@drawable/baseline_public_24" />


            <TextView
                android:id="@+id/texto4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/Publico"
                android:text="@string/publico"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:elevation="2dp"
        android:foreground="?android:attr/selectableItemBackground">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow">


            <ImageView
                android:id="@+id/Rrss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:src="@drawable/baseline_smartphone_24" />


            <TextView
                android:id="@+id/texto5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/Rrss"
                android:text="@string/RRSS"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:elevation="2dp"
        android:foreground="?android:attr/selectableItemBackground">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow">


            <ImageView
                android:id="@+id/Redes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:src="@drawable/baseline_smartphone_24" />


            <TextView
                android:id="@+id/texto6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/Redes"
                android:text="@string/Ig"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>







</LinearLayout>
</ScrollView>